--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,12 +10,28 @@ html(lang="en")
         header
             h1 WebRTC Test
         main
-            form#nick
-                input(type="text", placeholder="choose a nickname", required)
-                button Save
-            ul
-            form#message
-                input(type="text", placeholder="write a msg", required)
-                button Send
+            dev#welcome
+                form
+                    input(placeholder="room name", required, type="text")
+                    button Enter Room
+                h4 Open Rooms:
+                ul
+            dev#room
+                h3
+                ul
+                form#name
+                    input(placeholder="nickname", required, type="text")
+                    button Send
+                form#msg
+                    input(placeholder="message", required, type="text")
+                    button Send
+            //form#nick
+            //    input(type="text", placeholder="choose a nickname", required)
+            //    button Save
+            //ul
+            //form#message
+            //    input(type="text", placeholder="write a msg", required)
+            //    button Send
         //button Call
+        script(src="/socket.io/socket.io.js")
         script(src="/public/js/app.js")
